{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 143,
  "lineage": "dfc9691b-eee0-2590-5aa3-44badbb98173",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3298eb031d8d963",
            "arn": "arn:aws:ec2:us-east-1:414691912398:elastic-ip/eipalloc-0e3298eb031d8d963",
            "association_id": "eipassoc-04c573e88654d8c5a",
            "domain": "vpc",
            "id": "eipalloc-0e3298eb031d8d963",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b0154bf55512dcf5",
            "private_dns": "ip-10-0-1-171.ec2.internal",
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-98-87-54-219.compute-1.amazonaws.com",
            "public_ip": "98.87.54.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "shoppers9-nat-eip-1"
            },
            "tags_all": {
              "Name": "shoppers9-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028fb04d039922ee4",
            "arn": "arn:aws:ec2:us-east-1:414691912398:elastic-ip/eipalloc-028fb04d039922ee4",
            "association_id": "eipassoc-003fa023ae0f7fdba",
            "domain": "vpc",
            "id": "eipalloc-028fb04d039922ee4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-021a0b92002c92401",
            "private_dns": "ip-10-0-2-148.ec2.internal",
            "private_ip": "10.0.2.148",
            "public_dns": "ec2-35-169-200-163.compute-1.amazonaws.com",
            "public_ip": "35.169.200.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "shoppers9-nat-eip-2"
            },
            "tags_all": {
              "Name": "shoppers9-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:internet-gateway/igw-06409dc59c5fd9e7a",
            "id": "igw-06409dc59c5fd9e7a",
            "owner_id": "414691912398",
            "tags": {
              "Name": "shoppers9-igw"
            },
            "tags_all": {
              "Name": "shoppers9-igw"
            },
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "arn_suffix": "app/shoppers9-alb/6dad10c11178015a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shoppers9-alb-268030346.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shoppers9-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c6010346065d35b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a7bb3cd26cf8d93"
              },
              {
                "subnet_id": "subnet-00ceb00055997c87e"
              }
            ],
            "subnets": [
              "subnet-00a7bb3cd26cf8d93",
              "subnet-00ceb00055997c87e"
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "vpc_id": "vpc-0d24c4eb337fd433a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/64621a11b0d217ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-admin-tg/0c362e3e51e8d996",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/64621a11b0d217ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "mutual_authentication": [],
            "port": 3001,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.admin",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/3bfb488e5270feb9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-backend-tg/7fc6bdd51a14b3f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/3bfb488e5270feb9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/906826267d55a505",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/906826267d55a505",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/06059a3749d8f9b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-frontend-tg/1080b54110a5e1cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/06059a3749d8f9b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa",
            "certificate_arn": "arn:aws:acm:us-east-1:414691912398:certificate/bcbe5a67-3eb4-4d50-b783-f429b277dc89",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-frontend-tg/1080b54110a5e1cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-admin-tg/0c362e3e51e8d996",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/9ab4ec7a9b945f8c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "admin.shoppers9.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/9ab4ec7a9b945f8c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa",
            "priority": 200,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.frontend_https",
            "aws_lb_target_group.admin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "admin_path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-admin-tg/0c362e3e51e8d996",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/2cd184445c4d0d68",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "shoppers9.com",
                      "www.shoppers9.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/admin/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/2cd184445c4d0d68",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa",
            "priority": 250,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend_https",
            "aws_lb_target_group.admin",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-backend-tg/7fc6bdd51a14b3f1",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/cbf1e4ba4ab83c50",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.shoppers9.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/cbf1e4ba4ab83c50",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa",
            "priority": 100,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.frontend_https",
            "aws_lb_target_group.backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-backend-tg/7fc6bdd51a14b3f1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/43b9aa3c29cc9406",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "shoppers9.com",
                      "www.shoppers9.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener-rule/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa/43b9aa3c29cc9406",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:listener/app/shoppers9-alb/6dad10c11178015a/eae464b3809beaaa",
            "priority": 150,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend_https",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-admin-tg/0c362e3e51e8d996",
            "arn_suffix": "targetgroup/shoppers9-admin-tg/0c362e3e51e8d996",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-admin-tg/0c362e3e51e8d996",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shoppers9-admin-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-backend-tg/7fc6bdd51a14b3f1",
            "arn_suffix": "targetgroup/shoppers9-backend-tg/7fc6bdd51a14b3f1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-backend-tg/7fc6bdd51a14b3f1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shoppers9-backend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-frontend-tg/1080b54110a5e1cc",
            "arn_suffix": "targetgroup/shoppers9-frontend-tg/1080b54110a5e1cc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414691912398:targetgroup/shoppers9-frontend-tg/1080b54110a5e1cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:414691912398:loadbalancer/app/shoppers9-alb/6dad10c11178015a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shoppers9-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Shoppers9"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3298eb031d8d963",
            "association_id": "eipassoc-04c573e88654d8c5a",
            "connectivity_type": "public",
            "id": "nat-05877556dd0d669fd",
            "network_interface_id": "eni-0b0154bf55512dcf5",
            "private_ip": "10.0.1.171",
            "public_ip": "98.87.54.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a7bb3cd26cf8d93",
            "tags": {
              "Name": "shoppers9-nat-gateway-1"
            },
            "tags_all": {
              "Name": "shoppers9-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028fb04d039922ee4",
            "association_id": "eipassoc-003fa023ae0f7fdba",
            "connectivity_type": "public",
            "id": "nat-0754dfc298227c90c",
            "network_interface_id": "eni-021a0b92002c92401",
            "private_ip": "10.0.2.148",
            "public_ip": "35.169.200.163",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ceb00055997c87e",
            "tags": {
              "Name": "shoppers9-nat-gateway-2"
            },
            "tags_all": {
              "Name": "shoppers9-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:route-table/rtb-08c8025d6aa14d63e",
            "id": "rtb-08c8025d6aa14d63e",
            "owner_id": "414691912398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05877556dd0d669fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shoppers9-private-rt-1"
            },
            "tags_all": {
              "Name": "shoppers9-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:route-table/rtb-06217c544fee5bef2",
            "id": "rtb-06217c544fee5bef2",
            "owner_id": "414691912398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0754dfc298227c90c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shoppers9-private-rt-2"
            },
            "tags_all": {
              "Name": "shoppers9-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:route-table/rtb-027a618a0798db598",
            "id": "rtb-027a618a0798db598",
            "owner_id": "414691912398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06409dc59c5fd9e7a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shoppers9-public-rt"
            },
            "tags_all": {
              "Name": "shoppers9-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205a8339f3cf1339",
            "route_table_id": "rtb-08c8025d6aa14d63e",
            "subnet_id": "subnet-08c485f68b6ada233"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c52a6317c77adf18",
            "route_table_id": "rtb-06217c544fee5bef2",
            "subnet_id": "subnet-06c6fd012bcfc1e34"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bcf3c7281d55d7e",
            "route_table_id": "rtb-027a618a0798db598",
            "subnet_id": "subnet-00a7bb3cd26cf8d93"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01901b595204490e5",
            "route_table_id": "rtb-027a618a0798db598",
            "subnet_id": "subnet-00ceb00055997c87e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:security-group/sg-0c6010346065d35b6",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6010346065d35b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shoppers9-alb",
            "name_prefix": "",
            "owner_id": "414691912398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-alb",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-alb",
              "Project": "Shoppers9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:security-group/sg-046ff9192e21f4430",
            "description": "Security group for DocumentDB cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046ff9192e21f4430",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0885b3a207fb28074"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "shoppers9-docdb",
            "name_prefix": "",
            "owner_id": "414691912398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-docdb",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-docdb",
              "Project": "Shoppers9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:security-group/sg-0885b3a207fb28074",
            "description": "Security group for ECS backend tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0885b3a207fb28074",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6010346065d35b6"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "shoppers9-ecs-backend",
            "name_prefix": "",
            "owner_id": "414691912398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-ecs-backend",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-ecs-backend",
              "Project": "Shoppers9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:security-group/sg-0f622016a1d05f15a",
            "description": "Security group for ECS frontend tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f622016a1d05f15a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6010346065d35b6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shoppers9-ecs-frontend",
            "name_prefix": "",
            "owner_id": "414691912398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-ecs-frontend",
              "Project": "Shoppers9"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "shoppers9-ecs-frontend",
              "Project": "Shoppers9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:subnet/subnet-08c485f68b6ada233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c485f68b6ada233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414691912398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shoppers9-private-subnet-1"
            },
            "tags_all": {
              "Name": "shoppers9-private-subnet-1"
            },
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:subnet/subnet-06c6fd012bcfc1e34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c6fd012bcfc1e34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414691912398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shoppers9-private-subnet-2"
            },
            "tags_all": {
              "Name": "shoppers9-private-subnet-2"
            },
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:subnet/subnet-00a7bb3cd26cf8d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a7bb3cd26cf8d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414691912398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shoppers9-public-subnet-1"
            },
            "tags_all": {
              "Name": "shoppers9-public-subnet-1"
            },
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:subnet/subnet-00ceb00055997c87e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ceb00055997c87e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414691912398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shoppers9-public-subnet-2"
            },
            "tags_all": {
              "Name": "shoppers9-public-subnet-2"
            },
            "vpc_id": "vpc-0d24c4eb337fd433a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414691912398:vpc/vpc-0d24c4eb337fd433a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02946abc4e7d18727",
            "default_route_table_id": "rtb-0180729098dd10003",
            "default_security_group_id": "sg-0de088c3650464c83",
            "dhcp_options_id": "dopt-085193e1bfc4a6dbd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d24c4eb337fd433a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0180729098dd10003",
            "owner_id": "414691912398",
            "tags": {
              "Name": "shoppers9-vpc"
            },
            "tags_all": {
              "Name": "shoppers9-vpc"
            }
          }
        }
      ]
    }
  ]
}